@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-17T02:28:50Z",
+  "timestamp" : "2022-09-17T16:33:37Z",
   "count_outdated" : 490,
   "uniques_outdated" : 311,
-  "count" : 526,
-  "uniques" : 335,
+  "count" : 527,
+  "uniques" : 336,
   "clones" : [
     {
       "timestamp": "2022-09-07T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-09-16T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
