@@ -1,5 +1,5 @@
 {
-  "count": 36,
+  "count": 37,
   "uniques": 10,
   "clones": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-09-16T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-17T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
