@@ -1,3 +1,11 @@
+2022-09-17T16:33:37Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3074036562
+* notice: last 14d: unq all: 10 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 311 490 / 335 526
+* notice: next accum: outdated-unq outdated-all / unq all: 311 490 / 336 527
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-17]
+
 2022-09-17T02:28:50Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3071805623
 * notice: last 14d: unq all: 10 36
